--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>个人博客网站</title>
+		<title>二狗子的春天</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="./css/layout.css" />
 	</head>
@@ -117,7 +117,7 @@
 			</div>
 			<!--尾部-->
 			<div id="footer">
-				&copy;Copyright (c) 2008 .All Rights reserved
+				&copy;Copyright (c) 2018 .All Rights reserved
 			</div>
 		</div>
 	</body>
