--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 				<div id="logo">
 					<a href="#">二狗的春天! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
 				</div>
-				<div id="search">
+				<div id="search" style="display: none;">
 					<form action="#" method="get">
-						<input type="text" name="searchtxt" id="searchtxt" value="" class="stxt"/>
-						<input type="submit" name="btn_search" id="btn_search" value="GO" class="go"/>
+						<input type="text" name="searchtxt" id="searchtxt" value="" class="stxt"/ >
+						<input type="submit" name="btn_search" id="btn_search" value="GO" class="go"  />
 					</form>
 				</div>
 				<!--导航栏-->
@@ -60,8 +60,7 @@
 					<div class="content">
 						<ul>
 							<li><a href="https://www.cnblogs.com/wsg25/p/7400947.html">页面布局</a></li>
-							<li><a href="#">无</a></li>
-							<li><a href="#">无</a></li>
+							<li><a href="http://www.runoob.com/w3cnote/android-app-develop-learning.html">APP开发</a></li>
 						</ul>
 					</div>
 
@@ -115,32 +114,30 @@
 				<div id="right">
 						<!--右侧内容一-->
 					<div class="title">
-						<h2>C罗</h2>
+						<h2>JAVA</h2>
 					</div>
 					<div class="content">
-						<p>克里斯蒂亚诺·罗纳尔多（Cristiano Ronaldo），1985年2月5日出生于葡萄牙马德拉岛丰沙尔。简称C罗，葡萄牙足球运动员，司职边锋可兼任中锋，现效力于西甲皇家马德里足球俱乐部，并身兼葡萄牙国家队队长[1-2]。
-						C罗带球速度极快，善于突破和射门，拥有强悍的身体素质，技术非常全面[3]。</p>
-						<p>C罗出道于里斯本竞技。2003年，加盟英超曼联，期间获得了英格兰足球超级联赛冠军、欧洲冠军联赛冠军、世俱杯冠军等十个赛事冠军。囊获了英超最佳射手
-						、欧冠最佳射手、英格兰足球先生、世界足球先生、金球奖、欧洲金靴奖等个人荣誉[4]。2009年6月，C罗以身价9600万欧元转会至西甲皇马。前四赛季在199
-						场比赛中201个进球49次助攻，以场均1.01球的进球率成为皇马历史上进球率最高的球员[5]。</p>
+						<p>Java是一门面向对象编程语言，不仅吸收了C++语言的各种优点，还摒弃了C++里难以理解的多继承、指针等概念，因此Java语言具有功能强大和简单易用两个特征。Java语言作为静态面向对象编程语言的代表，极好地实现了面向对象理论，允许程序员以优雅的思维方式进行复杂的编程[1]  。</p>
+                        <p>Java具有简单性、面向对象、分布式、健壮性、安全性、平台独立与可移植性、多线程、动态性等特点[2]  。</p>
+						<p>Java可以编写桌面应用程序、Web应用程序、分布式系统和嵌入式系统应用程序等[3]  。</p>
 					</div>
 						<!--右侧内容二-->
 					<div class="title">
-						<h2>梅西</h2>
+						<h2>DELPHI</h2>
 					</div>
 					<div class="content">
-						<p>里奥·梅西（Lionel Messi），1987年6月24日出生于圣菲省罗萨里奥市，阿根廷足球运动员。</p>
+						<p>现在使用delphi的越来越少，预知后事如何，且听下回复分解。</p>
 						<p>
-						2000年，梅西加入巴塞罗那俱乐部。2005年，阿根廷青年队夺取世青赛冠军，梅西赢得了金球奖和金靴奖双项大奖。2007年4月18日，梅西在国王杯半决赛对赫塔菲时复制了马拉多纳在世界杯上的连过五人进球。2008年北京奥运会上，梅西随阿根廷国奥队夺取了金牌。2009年底，他当选了欧洲足球先生和世界足球先生。梅西2008-2009赛季率领球队连夺西甲、国王杯和欧冠三个冠军。2011年，梅西获得首届国际足联金球奖，还获得了欧足联欧洲最佳球员。
-2013年，他以46粒联赛进球的成绩第三次获得欧洲金靴奖奖杯。2014年，梅西随阿根廷队参加2014巴西世界杯。2014年巴西世界杯上，获得世界杯亚军</p>
+						Delphi是美国Borland（宝兰）公司开发的工作在Windows平台下的开发工具，它的前身是在DOS下的产品Borland Turbo Pascal。从产品名称上就可以知道，Turbo Pascal使用的是Pascal语言。从Turbo Pascal 5.5版本开始，Borland公司在传统Pascal的基础上加入了面向对象的功能。
+Delphi是一个集成开发环境（IDE），使用的是由传统Pascal语言发展而来的Object Pascal语言。它在本质上是一个代码编辑器而不是一种语言，但是由于Delphi是几乎是市场上唯一一个使用Pascal语言的产品，因此有的时候Delphi也成为了人们称呼Object Pascal的代名词。Borland公司已经把Object Pascal语言改称为Delphi语言。</p>
 					</div>
 					<div class="title">
-						<h2>厄齐尔</h2>
+						<h2>andriod</h2>
 					</div>
 					<div class="content">
-						<p>梅苏特·厄齐尔（Mesut Özil），1988年10月15日出生于德国的盖尔森基兴，德国籍足球运动员，场上司职前腰及左边锋。效力于阿森纳足球俱乐部。</p>
-						<p>2005年，厄齐尔被沙尔克04足球俱乐部看中，便签约加入沙尔克04青年队。2007年至2010年夏天，厄齐尔在云达不来梅足球俱乐部共效力过三个赛季，夺得过一次德国杯冠军。2010年，厄齐尔加盟至西甲皇家马德里足球俱乐部，在皇马效力了三个赛季，
-跟随皇马夺得过2011年国王杯和2012年的西甲联赛冠军。</p>
+						<a href="http://android.jobbole.com/83380/">
+							<h4>自学之路!!!!!!!!!!!</h4>
+						</a>
 					</div>
 				</div>
 			</div>
