--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 					</div>
 						<!--左侧侧边栏一-->
 					<div class="title">
+						<h2>版本控制工具使用</h2>
+					</div>
+					<div class="content">
+						<ul>
+							<li><a href="https://github.com/cncounter/translation/blob/master/tiemao_2014/GitHelp/GitHelp.md">git使用</a></li>
+							<li><a href="http://blog.csdn.net/maplejaw_/article/details/52874348">svn使用</a></li>
+						</ul>
+					</div>
+						
+					<div class="title">
 						<h2>JAVA</h2>
 					</div>
 					<div class="content">
