--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 				<div id="logo">
 					<a href="#">二狗的春天! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
 				</div>
-				<div id="search" style="display: none;">
+				<div id="search" >
+					<h3 style="color: red;">技术交流QQ群:132117572</h3>
 					<form action="#" method="get">
-						<input type="text" name="searchtxt" id="searchtxt" value="" class="stxt"/ >
-						<input type="submit" name="btn_search" id="btn_search" value="GO" class="go"  />
+						<input type="text" name="searchtxt" id="searchtxt" value="" class="stxt" style="display: none;" />
+						<input type="submit" name="btn_search" id="btn_search" value="GO" class="go" style="display: none;" />
 					</form>
 				</div>
 				<!--导航栏-->
