--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>二狗子的春天</title>
+		<title>二狗的Spring</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="./css/layout.css" />
 	</head>
