名扬的成长

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>二狗的Spring</title>
+		<title>小白成长之路</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="./css/layout.css" />
 	</head>
@@ -11,7 +11,7 @@
 			<!--网站头部11-->
 			<div id="header">
 				<div id="logo">
-					<a href="#">二狗的春天! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
+					<a href="#">名扬的成长! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
 				</div>
 				<div id="search" >
 					<h3 style="color: red;">技术交流QQ群:132117572</h3>
