--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					</div>
 					<div class="content">
 						<ul>
+							<li><a href="http://blog.csdn.net/qq_26849491/article/details/51638757">基础学习阶段</a></li>
 							<li><a href="https://www.cnblogs.com/wsg25/p/7400947.html">页面布局</a></li>
 							<li><a href="http://www.runoob.com/w3cnote/android-app-develop-learning.html">APP开发</a></li>
 						</ul>
