--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="./css/layout.css" />
 	</head>
 	<body >
-		<!--网站的容器-->
+		<!--网站的容器qqq-->
 		<div id="wrapper">
 			<!--网站头部11-->
 			<div id="header">
@@ -23,12 +23,12 @@
 				<!--导航栏-->
 			<div id="nav">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Photos</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Links</a></li>
-					<li><a href="#">Contacts</a></li>
+					<li><a href="#">家园</a></li>
+					<li><a href="#">博客</a></li>
+					<li><a href="#">相册</a></li>
+					<li><a href="#">关于</a></li>
+					<li><a href="#">连接</a></li>
+					<li><a href="#">其他</a></li>
 				</ul>
 			</div>	
 		</div>
