--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<!--网站头部11-->
 			<div id="header">
 				<div id="logo">
-					<a href="#">大傻二傻的成长! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
+					<a href="#">大傻二傻的成长!!!!!! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
 				</div>
 				<div id="search" >
 					<h3 style="color: red;">技术交流QQ群:132117572</h3>
