--- a/✎﹏๓₯㎕ζั͡❦﹏﹏.html
+++ b/✎﹏๓₯㎕ζั͡❦﹏﹏.html
@@ -4,6 +4,22 @@
 		<title>小白成长之路</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="./css/layout.css" />
+		<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				
+			
+		    	$.ajax({
+		        type: "GET",
+		        url: "http://115.29.145.135:8080/GYL/GYL/api/good?no=123",
+		        success: function(msg){
+		        alert(msg);
+				   }
+				});  
+
+						
+			})
+		</script>
 	</head>
 	<body >
 		<!--网站的容器qqq-->
