--- a/✎﹏๓₯㎕ζั͡❦﹏﹏.html
+++ b/✎﹏๓₯㎕ζั͡❦﹏﹏.html
@@ -11,7 +11,7 @@
 			
 		    	$.ajax({
 		        type: "GET",
-		        url: "http://115.29.145.135:8080/GYL/GYL/api/good?no=123",
+		        url: "http://115.29.145.135:8080/GYL/GYL/myservlet?no=我是来自接口的数据",
 		        success: function(msg){
 		        alert(msg);
 				   }
