--- a/✎﹏๓₯㎕ζั͡❦﹏﹏.html
+++ b/✎﹏๓₯㎕ζั͡❦﹏﹏.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>小白成长之路</title>
+		<title>软件学习过程</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="./css/layout.css" />
 		<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
