原件学习心得体会

--- a/✎﹏๓₯㎕ζั͡❦﹏﹏.html
+++ b/✎﹏๓₯㎕ζั͡❦﹏﹏.html
@@ -11,7 +11,7 @@
 			
 		    	$.ajax({
 		        type: "GET",
-		        url: "http://115.29.145.135:8080/GYL/GYL/myservlet?no=我是来自接口的数据",
+		        url: "http://115.29.145.135:8080/GYL/GYL/myservlet?no=欢迎来到小白的世界",
 		        success: function(msg){
 		        alert(msg);
 				   }
@@ -40,10 +40,18 @@
 			<!--网站头部11-->
 			<div id="header">
 				<div id="logo">
-					<a href="#">小白的成长!!!!!! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
+					<h3 style="color: red;">&nbsp;</h3>
+					<h3 style="color: red;">&nbsp;</h3>
+					<a href="#">软件学习!!!!!! </a><span style="font-style: italic;font-size: 16px;"><span style="color: #fff;">You will</span> never walk alone!</span>
 				</div>
 				<div id="search" >
-					<h3 style="color: red;">技术交流QQ群:132117572</h3>
+					<h3 style="color: red;">&nbsp;</h3>
+					<h3 style="color: red;">&nbsp;</h3>
+					<h2 style="color: red;">技术交流QQ群:132117572</h2>
+					<h3 style="color: red;">&nbsp;</h3>
+					<h3 style="color: red;">&nbsp;</h3>
+					<h2 style="color: red;">本人QQ:108471654</h2>
+
 					<form action="#" method="get">
 						<input type="text" name="searchtxt" id="searchtxt" value="" class="stxt" style="display: none;" />
 						<input type="submit" name="btn_search" id="btn_search" value="GO" class="go" style="display: none;" />
@@ -184,6 +192,13 @@
 				<!--右侧侧边栏-->
 				<div id="right">
 						<!--右侧内容一-->
+					<div class="title">
+						<h2>个人学习心得</h2>
+					</div>
+					<div class="content">
+						<p>暂无</p>
+					</div>
+						
 					<div class="title">
 						<h2>JAVA</h2>
 					</div>
