--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						</ul>
 
 						<ul>
-							<li><a href="https://github.com/ZQiang94/Andriod-collect-blogs">ANDRIOD 值得一看</a></li>
+							<li><a href="https://github.com/ZQiang94/Andriod-collect-blogs">ANDRIOD 值得一看的</a></li>
 							
 						</ul>
 						
