--- a/index.html
+++ b/index.html
@@ -193,6 +193,18 @@
 						<ul>
 							<li><a href="https://zhanuuuuu.github.io/LFWJ.apk">家天下apk下载</a></li>
 						</ul>
+
+						<ul>
+							<li><a href="https://blog.csdn.net/zengcong2013/article/details/18714417">XLSReadWriteII5 安装</a></li>
+						</ul>
+						<ul>
+							<li><a href="https://www.cnblogs.com/railgunman/p/8657060.html">XLSReadWriteII5 读文件</a></li>
+						</ul>
+
+						<ul>
+							<li><a href="https://www.cnblogs.com/railgunman/p/8657060.html">XLSReadWriteII5 写文件</a></li>
+						</ul>
+
 					</div>
 				</div>
 				<!--右侧侧边栏-->
