--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<ul>
 					<li><a href="#">家园</a></li>
 					<li><a href="#">博客</a></li>
-					<li><a href="#">相册</a></li>
+					<li><a href="https://zhanuuuuu.github.io/photo.html">相册</a></li>
 					<li><a href="#">关于</a></li>
 					<li><a href="#">连接</a></li>
 					<li><a href="#">其他</a></li>
