--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 							<li><a href="http://blog.csdn.net/qq_32166627/article/details/70741729">mybatis</a></li>
 							<li><a href="http://blog.csdn.net/starloveleaf/article/details/53514512">SSM</a></li>
 							<li><a href="https://www.cnblogs.com/Jeffscnblog/p/SSH%E7%AE%80%E5%8D%95%E6%90%AD%E5%BB%BA%E4%BE%8B%E5%AD%90.html">SSH</a></li>
+							<li><a href="https://blog.csdn.net/liuchuanhong1/article/details/54603546 ">java消息队列</a></li>
 						</ul>
 					</div>
 
