--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
 							<li><a href="https://www.cnblogs.com/railgunman/p/8657060.html" target="_blank">XLSReadWriteII5 读文件</a></li>
 						
 							<li><a href="https://www.cnblogs.com/railgunman/p/8657060.html" target="_blank">XLSReadWriteII5 写文件</a></li>
+
+							<li><a href="https://jingyan.baidu.com/article/36d6ed1f50ecfc1bcf4883aa.html" target="_blank">如何封装EXE安装程序</a></li>
 						</ul>
 
 					</div>
