--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 						<h2>个人学习心得</h2>
 					</div>
 					<div class="content">
-						<p>暂无</p>
+						<p>为何一直坚持不懈,因为心中怒火不息。--燃烧</p>
 					</div>
 						
 					<div class="title">
