--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 
 							<li><a href="https://jingyan.baidu.com/article/36d6ed1f50ecfc1bcf4883aa.html" target="_blank">如何封装EXE安装程序</a></li>
 							<li><a href="http://www.sdbeta.com/mf/2017/1217/216979.html" target="_blank">DELEPI10.2.3安装教程</a></li>
+							<li><a href="https://www.cnblogs.com/wicub/p/5825328.html" target="_blank">UML数据库建模</a></li>
 						</ul>
 
 					</div>
