--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
 
 							<li><a href="https://jingyan.baidu.com/article/36d6ed1f50ecfc1bcf4883aa.html" target="_blank">如何封装EXE安装程序</a></li>
 							<li><a href="http://www.sdbeta.com/mf/2017/1217/216979.html" target="_blank">DELEPI10.2.3安装教程</a></li>
+							<li><a href="https://wenku.baidu.com/view/10f9e35b2379168884868762caaedd3383c4b532.html" target="_blank">DELPHI XE10 andriod开发环境搭建</a></li>
 							<li><a href="https://www.cnblogs.com/wicub/p/5825328.html" target="_blank">UML数据库建模</a></li>
+
+
 						</ul>
 
 					</div>
