android 页面布局详细说明

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					</div>
 
 					<div class="title">
-						<h2>ANDRIOD</h2>
+						<h2>ANDROID</h2>
 					</div>
 					<div class="content">
 						<ul>
@@ -243,11 +243,14 @@
 Delphi是一个集成开发环境（IDE），使用的是由传统Pascal语言发展而来的Object Pascal语言。它在本质上是一个代码编辑器而不是一种语言，但是由于Delphi是几乎是市场上唯一一个使用Pascal语言的产品，因此有的时候Delphi也成为了人们称呼Object Pascal的代名词。Borland公司已经把Object Pascal语言改称为Delphi语言。</p>
 					</div>
 					<div class="title">
-						<h2>andriod</h2>
+						<h2>android</h2>
 					</div>
 					<div class="content">
 						<a href="http://android.jobbole.com/83380/" target="_blank">
 							<h4>自学之路!!!!!!!!!!!</h4>
+						</a><br/>
+						<a href="https://www.cnblogs.com/dingxiansen/p/6040550.html" target="_blank">
+							<h4>android页面布局详细说明!!!!!!!!!!!</h4>
 						</a>
 					</div>
 				</div>
