--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
 							<li><a href="https://www.cnblogs.com/wicub/p/5825328.html" target="_blank">UML数据库建模</a></li>
 							<li><a href="https://github.com/HowieYuan/" target="_blank">Shiro+SpringBoot</a></li>
 
+							<li><a href="https://springcloud.cc/spring-cloud-dalston.html" target="_blank">SpringCloud中文API参考使用文档</a></li>
+
+							<li><a href="https://springcloud.cc/spring-cloud-netflix.html" target="_blank">SpringCloud中午API参考使用文档2：</a></li>
+
+							<li><a href="http://springcloud.cn/" target="_blank">SpringCloud中国社区网</a></li>
+
+							<li><a href="https://springcloud.cc/" target="_blank">SpirngCloud中文网：</a></li>
+
 
 						</ul>
 
