--- a/index.html
+++ b/index.html
@@ -233,10 +233,11 @@
 				<div id="right">
 						<!--右侧内容一-->
 					<div class="title">
-						<h2>个人学习心得</h2>
+						<h2>坚持</h2>
 					</div>
 					<div class="content">
 						<p>为何一直坚持不懈,因为心中怒火不息。--燃烧</p>
+						<p>境界达到,羽化成仙</p>	
 					</div>
 						
 					<div class="title">
