--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 						<h2>坚持</h2>
 					</div>
 					<div class="content">
-						<p>为何一直坚持不懈,因为心中怒火不息。--燃烧</p>
+						<p>倔强中前行</p>
 						<p>境界达到,羽化成仙</p>	
 					</div>
 						
