--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 							<li><a href="http://blog.csdn.net/qq_26849491/article/details/51638757" target="_blank">基础学习阶段</a></li>
 							<li><a href="https://www.cnblogs.com/wsg25/p/7400947.html" target="_blank">页面布局</a></li>
 							<li><a href="http://www.runoob.com/w3cnote/android-app-develop-learning.html" target="_blank">APP开发</a></li>
+							<li><a href="https://blog.csdn.net/qq_26849491/article/details/51638757" target="_blank">页面布局比较完善的</a></li>
 						</ul>
 					</div>
 
