游戏开发小程序

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<div class="content">
 						<ul>
 							<li><a href="https://mp.weixin.qq.com/debug/wxadoc/dev/api/" target="_blank">官网</a></li>
-							
+							<li><a href="https://www.w3cschool.cn/wxagame/wxagame-a4z62jrn.html" target="_blank">微信小程序游戏开发教程</a></li>
 						</ul>
 					</div>
 
