--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 							<li><a href="https://www.cnblogs.com/Eason-S/p/5851078.html" target="_blank">JAVA反射应用</a></li>
 							<li><a href="https://blog.csdn.net/huangwenyi1010/article/details/75577091?ref=myread" target="_blank">Java之IO,BIO,NIO,AIO</a></li>
 
+							<li><a href="https://www.cnblogs.com/JohnsonZilch/p/6554547.html" target="_blank">HashMap 的深入学习</a></li>
+
 						</ul>
 					</div>
 
