--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 					</div>
 					<div class="content">
 						<ul>
+							<li><a href="http://www.cnblogs.com/landeanfen/p/4976838.html" target="_blank">bootstrap table</a></li>
+
 							<li><a href="http://blog.csdn.net/qq_32166627/article/details/70741729" target="_blank">mybatis</a></li>
 							<li><a href="http://blog.csdn.net/starloveleaf/article/details/53514512" target="_blank">SSM</a></li>
 							<li><a href="https://www.cnblogs.com/Jeffscnblog/p/SSH%E7%AE%80%E5%8D%95%E6%90%AD%E5%BB%BA%E4%BE%8B%E5%AD%90.html" target="_blank">SSH</a></li>
