--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 
 							<li><a href="https://github.com/ityouknow/spring-boot-examples" target="_blank">Springboot初试牛刀</a></li>
 
+							<li><a href="https://github.com/zaiyunduan123/jesper_shop" target="_blank">基于SpringBoot+Mybatis+Thymeleaf商品信息管理系统</a></li>
+
 						</ul>
 					</div>
 
