--- a/index.html
+++ b/index.html
@@ -246,11 +246,12 @@
 				<div id="right">
 						<!--右侧内容一-->
 					<div class="title">
-						<h2>坚持</h2>
+						<h2>坚持--信念</h2>
 					</div>
 					<div class="content">
 						<p>倔强中前行</p>
 						<p>境界达到,羽化成仙</p>	
+						<p>请不要假装很努力,因为结果不会陪你去演戏</p>
 					</div>
 						
 					<div class="title">
