--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
 							<li><a href="http://www.sdbeta.com/mf/2017/1217/216979.html" target="_blank">DELEPI10.2.3安装教程</a></li>
 							<li><a href="https://wenku.baidu.com/view/10f9e35b2379168884868762caaedd3383c4b532.html" target="_blank">DELPHI XE10 andriod开发环境搭建</a></li>
 
+							<li><a href="https://bbs.csdn.net/topics/390536919" target="_blank">DELPHI CX GRID 实践应用</a></li>
+
 
 						</ul>
 					</div>
