--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
 
 							<li><a href="https://bbs.csdn.net/topics/390536919" target="_blank">DELPHI CX GRID 实践应用</a></li>
 
+							<li><a href="http://www.cnblogs.com/coder163/p/9203144.html" target="_blank">DEPHI 基础教程视频</a></li>
+
 
 						</ul>
 					</div>
