--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 					</div>
 					<div class="content">
 						<ul>
+						    <li><a href="https://blog.csdn.net/doymm2008/article/details/13288067" target="_blank">JAVA 23种设计模式</a></li>
+
 							<li><a href="http://www.cnblogs.com/landeanfen/p/4976838.html" target="_blank">bootstrap table</a></li>
 
 							<li><a href="http://blog.csdn.net/qq_32166627/article/details/70741729" target="_blank">mybatis</a></li>
@@ -256,6 +258,7 @@
 						<p>倔强中前行</p>
 						<p>境界达到,羽化成仙</p>	
 						<p>请不要假装很努力,因为结果不会陪你去演戏</p>
+						<p>大神源于坚持</p>
 					</div>
 						
 					<div class="title">
