--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<!--导航栏-->
 			<div id="nav">
 				<ul>
-					<li><a href="#">家园</a></li>
+					<li><a href="https://zhanuuuuu.github.io/marry/index">家园</a></li>
 					<li><a href="#">博客</a></li>
 					<li><a href="https://zhanuuuuu.github.io/photo" target="_blank" >相册</a></li>
 					<li><a href="#">关于</a></li>
