--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
 							<li><a href="https://github.com/zaiyunduan123/jesper_shop" target="_blank">基于SpringBoot+Mybatis+Thymeleaf商品信息管理系统</a></li>
 
+							<li><a href="https://gitee.com/zscat/mall" target="_blank">mall项目是一套电商系统，包括前台商城系统及后台管理系统,h5和小程序，基于SpringBoot+MyBatis实现。 前台商城系统包含首页门户、商品推荐、商品搜索、商品展示、购物车、订单流程、会员中心、客户服务、帮助中心等模块。 后台管理系统包含商品管理、订单管理、会员管理、促销管理、运营管理、内容管理、统计报表、财务管理、权限管理、设置等模块</a></li>
+
 						</ul>
 					</div>
 
