--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
 					<div class="content">
 						<ul>
 							<li><a href="http://www.w3school.com.cn/html5/index.asp" target="_blank">官网</a></li>
+
+							<li><a href="http://orchome.com/63" target="_blank">Studay</a></li>
 							
 						</ul>
 					</div>
