--- a/photo.html
+++ b/photo.html
@@ -138,45 +138,46 @@ body {
 
 <div class="drag_div" id="drag_div">
   <div class="one">
-    <p class="img_100 margin_bottom_15"><img src="images/4.jpg"></p>
-    <p class="text_center">我是第一张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/web_1.png"></p>
+    <p class="text_center">web展示1</p>
   </div>
   <div class="two">
-    <p class="img_100 margin_bottom_15"><img src="images/2.jpg"></p>
-    <p class="text_center">我是第二张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/web_2.png"></p>
+    <p class="text_center">web展示2</p>
   </div>
   <div class="three">
-    <p class="img_100 margin_bottom_15"><img src="images/3.jpg"></p>
-    <p class="text_center">我是第三张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/web_3.png"></p>
+    <p class="text_center">web展示3</p>
   </div>
   <div class="four">
-    <p class="img_100 margin_bottom_15"><img src="images/1.jpg"></p>
-    <p class="text_center">我是第四张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/mini_1.jpg"></p>
+    <p class="text_center">小程序1</p>
   </div>
   <div class="five">
-    <p class="img_100 margin_bottom_15"><img src="images/5.jpg"></p>
-    <p class="text_center">我是第五张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/mini_2.jpg"></p>
+    <p class="text_center">小程序2</p>
   </div>
   <div class="six">
-    <p class="img_100 margin_bottom_15"><img src="images/6.jpg"></p>
-    <p class="text_center">我是第六张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/mini_3.jpg"></p>
+    <p class="text_center">小程序3</p>
   </div>
   <div class="seven">
-    <p class="img_100 margin_bottom_15"><img src="images/7.jpg"></p>
-    <p class="text_center">我是第七张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/android_1.jpg"></p>
+    <p class="text_center">android展示1</p>
   </div>
   <div class="eight">
-    <p class="img_100 margin_bottom_15"><img src="images/8.jpg"></p>
-    <p class="text_center">我是第八张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/android_2.jpg"></p>
+    <p class="text_center">android展示2</p>
   </div>
   <div class="nine">
-    <p class="img_100 margin_bottom_15"><img src="images/9.jpg"></p>
-    <p class="text_center">我是第九张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/delphi_1.png"></p>
+    <p class="text_center">PC展示(delphi)</p>
   </div>
   <div class="ten">
-    <p class="img_100 margin_bottom_15"><img src="images/10.jpg"></p>
-    <p class="text_center">我是第十张</p>
+    <p class="img_100 margin_bottom_15"><img src="images/delphi_2.png"></p>
+    <p class="text_center">PC展示(delphi)</p>
   </div>
+
  
 
 </div>
