--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<ul>
 					<li><a href="https://zhanuuuuu.github.io/marry/index">家园</a></li>
 					<li><a href="#">博客</a></li>
-					<li><a href="https://zhanuuuuu.github.io/photo" target="_blank" >相册</a></li>
+					<li><a href="https://zhanuuuuu.github.io/photo" target="_blank" >作品</a></li>
 					<li><a href="#">关于</a></li>
 					<li><a href="#">连接</a></li>
 					<li><a href="#">其他</a></li>
